# snake

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  snake.rs
